--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Weixin Shoot : Weixin  Shoot  by cocos2d-x3.0" />
+    <meta name="description" content="微信打飞机 cocos2d-x3.0 : 微信打飞机  with cocos2d-x3.0" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Weixin Shoot</title>
+    <title>微信打飞机 cocos2d-x3.0</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/belm/Shoot">View on GitHub</a>
 
-          <h1 id="project_title">Weixin Shoot</h1>
-          <h2 id="project_tagline">Weixin  Shoot  by cocos2d-x3.0</h2>
+          <h1 id="project_title">微信打飞机 cocos2d-x3.0</h1>
+          <h2 id="project_tagline">微信打飞机  with cocos2d-x3.0</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/belm/Shoot/zipball/master">Download this project as a .zip file</a>
@@ -32,9 +32,11 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a name="welcome-to-%E5%BE%AE%E4%BF%A1%E6%89%93%E9%A3%9E%E6%9C%BA-github-pages" class="anchor" href="#welcome-to-%E5%BE%AE%E4%BF%A1%E6%89%93%E9%A3%9E%E6%9C%BA-github-pages"><span class="octicon octicon-link"></span></a>Welcome to 微信打飞机 GitHub Pages.</h3>
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+
+<p>开始打飞机.....</p>
 
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
@@ -68,7 +70,7 @@ $ git checkout gh-pages
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Weixin Shoot maintained by <a href="https://github.com/belm">belm</a></p>
+        <p class="copyright">微信打飞机 cocos2d-x3.0 maintained by <a href="https://github.com/belm">belm</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
